back-img spacing fix

--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -58,6 +58,10 @@
     z-index: -10;
 }
 
+.back-mb{
+    margin-bottom: -2vw;
+}
+
 .rot{
     transform: rotate(180deg);
 }
